@@ -3,7 +3,6 @@ package org.dcsa.ebl.service.impl;
 import lombok.RequiredArgsConstructor;
 import org.dcsa.core.events.edocumentation.model.transferobject.ConsignmentItemTO;
 import org.dcsa.core.events.edocumentation.service.ConsignmentItemService;
-import org.dcsa.core.events.edocumentation.service.ShipmentService;
 import org.dcsa.core.events.model.Booking;
 import org.dcsa.core.events.model.ShipmentEvent;
 import org.dcsa.core.events.model.ShippingInstruction;
@@ -11,10 +10,16 @@ import org.dcsa.core.events.model.TransportDocument;
 import org.dcsa.core.events.model.enums.DocumentTypeCode;
 import org.dcsa.core.events.model.enums.EventClassifierCode;
 import org.dcsa.core.events.model.enums.ShipmentEventTypeCode;
-import org.dcsa.core.events.model.transferobjects.*;
+import org.dcsa.core.events.model.transferobjects.DocumentPartyTO;
+import org.dcsa.core.events.model.transferobjects.EquipmentTO;
+import org.dcsa.core.events.model.transferobjects.ShippingInstructionTO;
+import org.dcsa.core.events.model.transferobjects.UtilizedTransportEquipmentTO;
 import org.dcsa.core.events.repository.BookingRepository;
 import org.dcsa.core.events.repository.TransportDocumentRepository;
-import org.dcsa.core.events.service.*;
+import org.dcsa.core.events.service.DocumentPartyService;
+import org.dcsa.core.events.service.ReferenceService;
+import org.dcsa.core.events.service.ShipmentEventService;
+import org.dcsa.core.events.service.UtilizedTransportEquipmentService;
 import org.dcsa.core.exception.ConcreteRequestErrorMessageException;
 import org.dcsa.ebl.model.mappers.ShippingInstructionMapper;
 import org.dcsa.ebl.model.transferobjects.ShippingInstructionResponseTO;
@@ -43,7 +48,6 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
   private final ShipmentEventService shipmentEventService;
   private final DocumentPartyService documentPartyService;
   private final ReferenceService referenceService;
-  private final ShipmentService shipmentService;
   private final ConsignmentItemService consignmentItemService;
 
   private final BookingRepository bookingRepository;
@@ -132,7 +136,7 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
         shippingInstructionTO.getUtilizedTransportEquipments().stream()
             .map(UtilizedTransportEquipmentTO::getEquipment)
             .map(EquipmentTO::getEquipmentReference)
-            .collect(Collectors.toList());
+            .toList();
     if (equipmentReferences.size() != equipmentReferences.stream().distinct().count()) {
       return Mono.error(
           ConcreteRequestErrorMessageException.invalidParameter(
@@ -188,25 +192,7 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
                   si.getShippingInstructionCreatedDateTime());
               shippingInstructionTO.setShippingInstructionUpdatedDateTime(
                   si.getShippingInstructionUpdatedDateTime());
-              return Mono.when(
-                      insertLocationTO(shippingInstructionTO.getPlaceOfIssue(), si.getId())
-                          .doOnNext(shippingInstructionTO::setPlaceOfIssue),
-                      insertDocumentPartyTOs(shippingInstructionTO.getDocumentParties(), si.getId())
-                          .doOnNext(shippingInstructionTO::setDocumentParties),
-                      utilizedTransportEquipmentService
-                          .addUtilizedTransportEquipmentToShippingInstruction(
-                              shippingInstructionTO.getUtilizedTransportEquipments(),
-                              shippingInstructionTO)
-                          .doOnNext(shippingInstructionTO::setUtilizedTransportEquipments),
-                      referenceService.createReferencesByShippingInstructionIdAndTOs(
-                          si.getId(), shippingInstructionTO.getReferences()),
-                      consignmentItemService
-                          .createConsignmentItemsByShippingInstructionIDAndTOs(
-                              si.getId(),
-                              shippingInstructionTO.getConsignmentItems(),
-                              shippingInstructionTO.getUtilizedTransportEquipments())
-                          .doOnNext(shippingInstructionTO::setConsignmentItems))
-                  .thenReturn(shippingInstructionTO);
+              return createDeepObjectsForShippingInstruction(si, shippingInstructionTO);
             })
         .flatMap(
             siTO ->
@@ -269,6 +255,17 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
               }
               return Mono.just(si);
             })
+        .flatMap(
+            si -> {
+              si.setValidUntil(OffsetDateTime.now());
+              return shippingInstructionRepository.save(si);
+            })
+        .flatMap(
+            si -> {
+              si.setId(null);
+              si.setValidUntil(null);
+              return shippingInstructionRepository.save(si);
+            })
         .flatMap(si -> createShipmentEvent(si).thenReturn(si))
         .flatMap(
             si -> {
@@ -279,38 +276,7 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
                   si.getShippingInstructionCreatedDateTime());
               shippingInstructionRequest.setShippingInstructionUpdatedDateTime(
                   OffsetDateTime.now());
-              return Mono.when(
-                              locationService
-                                  .resolveLocationByTO(
-                                      si.getPlaceOfIssueID(),
-                                      shippingInstructionRequest.getPlaceOfIssue(),
-                                      placeOfIssue ->
-                                          shippingInstructionRepository.setPlaceOfIssueFor(
-                                              placeOfIssue, si.getId()))
-                                  .doOnNext(shippingInstructionRequest::setPlaceOfIssue),
-                              utilizedTransportEquipmentService
-                                  .resolveUtilizedTransportEquipmentsForShippingInstructionReference(
-                                      shippingInstructionRequest.getUtilizedTransportEquipments(),
-                                      shippingInstructionRequest)
-                                  .doOnNext(
-                                      shippingInstructionRequest::setUtilizedTransportEquipments),
-                              documentPartyService
-                                  .resolveDocumentPartiesForShippingInstructionID(
-                                      si.getId(), shippingInstructionRequest.getDocumentParties())
-                                  .doOnNext(shippingInstructionRequest::setDocumentParties),
-                              referenceService
-                                  .resolveReferencesForShippingInstructionReference(
-                                      shippingInstructionRequest.getReferences(), si.getId())
-                                  .doOnNext(shippingInstructionRequest::setReferences))
-                          .thenReturn(shippingInstructionRequest)
-                  .then(
-                      consignmentItemService
-                          .createConsignmentItemsByShippingInstructionIDAndTOs(
-                              si.getId(),
-                              shippingInstructionRequest.getConsignmentItems(),
-                              shippingInstructionRequest.getUtilizedTransportEquipments())
-                          .doOnNext(shippingInstructionRequest::setConsignmentItems))
-                  .thenReturn(shippingInstructionRequest)
+              return createDeepObjectsForShippingInstruction(si, shippingInstructionRequest)
                   .flatMap(siTO -> transitionDocumentStatusAndRaiseShipmentEvent(si.getId(), siTO))
                   .flatMap(
                       siTO -> {
@@ -335,6 +301,33 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
                       });
             })
         .map(shippingInstructionMapper::dtoToShippingInstructionResponseTO);
+  }
+
+  private Mono<ShippingInstructionTO> createDeepObjectsForShippingInstruction(
+      ShippingInstruction si, ShippingInstructionTO shippingInstructionTO) {
+    return Mono.when(
+            locationService
+                .createLocationByTO(
+                    shippingInstructionTO.getPlaceOfIssue(),
+                    poi -> shippingInstructionRepository.setPlaceOfIssueFor(poi, si.getId()))
+                .doOnNext(shippingInstructionTO::setPlaceOfIssue),
+            documentPartyService
+                .createDocumentPartiesByShippingInstructionID(
+                    si.getId(), shippingInstructionTO.getDocumentParties())
+                .doOnNext(shippingInstructionTO::setDocumentParties),
+            utilizedTransportEquipmentService
+                .addUtilizedTransportEquipmentToShippingInstruction(
+                    shippingInstructionTO.getUtilizedTransportEquipments(), shippingInstructionTO)
+                .doOnNext(shippingInstructionTO::setUtilizedTransportEquipments),
+            referenceService.createReferencesByShippingInstructionIdAndTOs(
+                si.getId(), shippingInstructionTO.getReferences()),
+            consignmentItemService
+                .createConsignmentItemsByShippingInstructionIDAndTOs(
+                    si.getId(),
+                    shippingInstructionTO.getConsignmentItems(),
+                    shippingInstructionTO.getUtilizedTransportEquipments())
+                .doOnNext(shippingInstructionTO::setConsignmentItems))
+        .thenReturn(shippingInstructionTO);
   }
 
   Mono<List<Booking>> validateDocumentStatusOnBooking(ShippingInstructionTO shippingInstructionTO) {
@@ -379,20 +372,6 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
                                 "No booking found for carrier booking reference: "
                                     + carrierBookingReference))))
         .collectList();
-  }
-
-  private Mono<LocationTO> insertLocationTO(LocationTO placeOfIssue, UUID shippingInstructionID) {
-    if (placeOfIssue == null) return Mono.empty();
-    return locationService.createLocationByTO(
-        placeOfIssue,
-        poi -> shippingInstructionRepository.setPlaceOfIssueFor(poi, shippingInstructionID));
-  }
-
-  private Mono<List<DocumentPartyTO>> insertDocumentPartyTOs(
-      List<DocumentPartyTO> documentPartyTOs, UUID shippingInstructionID) {
-    if (documentPartyTOs == null) return Mono.empty();
-    return documentPartyService.createDocumentPartiesByShippingInstructionID(
-        shippingInstructionID, documentPartyTOs);
   }
 
   List<String> validateShippingInstruction(ShippingInstructionTO shippingInstructionTO) {
@@ -485,7 +464,7 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
   }
 
   private Mono<ShippingInstructionTO> transitionDocumentStatusAndRaiseShipmentEvent(
-    UUID shippingInstructionID, ShippingInstructionTO shippingInstructionTO) {
+      UUID shippingInstructionID, ShippingInstructionTO shippingInstructionTO) {
     List<String> validationResult = validateShippingInstruction(shippingInstructionTO);
     Mono<ShipmentEvent> shipmentEvent;
     if (!validationResult.isEmpty()) {
@@ -497,13 +476,6 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
       } else {
         shippingInstructionTO.setDocumentStatus(ShipmentEventTypeCode.PENU);
       }
-      shipmentEvent =
-        getShipmentEventFromShippingInstruction(
-          String.join("\n", validationResult),
-          shippingInstructionTO.getDocumentStatus(),
-          shippingInstructionID,
-          shippingInstructionTO.getShippingInstructionReference(),
-          shippingInstructionTO.getShippingInstructionUpdatedDateTime());
     } else {
       if (shippingInstructionTO.getDocumentStatus() == ShipmentEventTypeCode.DRFT) {
         // UC5 / UC7 that was accepted goes directly to APPR.
@@ -511,33 +483,33 @@ public class ShippingInstructionServiceImpl implements ShippingInstructionServic
       } else {
         shippingInstructionTO.setDocumentStatus(ShipmentEventTypeCode.DRFT);
       }
-      shipmentEvent =
-        getShipmentEventFromShippingInstruction(
-          String.join("\n", validationResult),
-          shippingInstructionTO.getDocumentStatus(),
-          shippingInstructionID,
-          shippingInstructionTO.getShippingInstructionReference(),
-          shippingInstructionTO.getShippingInstructionUpdatedDateTime());
     }
+    shipmentEvent =
+        getShipmentEventFromShippingInstruction(
+            String.join("\n", validationResult),
+            shippingInstructionTO.getDocumentStatus(),
+            shippingInstructionID,
+            shippingInstructionTO.getShippingInstructionReference(),
+            shippingInstructionTO.getShippingInstructionUpdatedDateTime());
     return shipmentEvent.map(shipmentEventService::create).thenReturn(shippingInstructionTO);
   }
 
   private Mono<ShipmentEvent> shipmentEventFromShippingInstruction(
-    ShippingInstruction shippingInstruction, String reason) {
+      ShippingInstruction shippingInstruction, String reason) {
     return getShipmentEventFromShippingInstruction(
-      reason,
-      shippingInstruction.getDocumentStatus(),
-      shippingInstruction.getId(),
-      shippingInstruction.getShippingInstructionReference(),
-      shippingInstruction.getShippingInstructionUpdatedDateTime());
+        reason,
+        shippingInstruction.getDocumentStatus(),
+        shippingInstruction.getId(),
+        shippingInstruction.getShippingInstructionReference(),
+        shippingInstruction.getShippingInstructionUpdatedDateTime());
   }
 
   static Mono<ShipmentEvent> getShipmentEventFromShippingInstruction(
-    String reason,
-    ShipmentEventTypeCode documentStatus,
-    UUID documentID,
-    String documentReference,
-    OffsetDateTime shippingInstructionUpdatedDateTime) {
+      String reason,
+      ShipmentEventTypeCode documentStatus,
+      UUID documentID,
+      String documentReference,
+      OffsetDateTime shippingInstructionUpdatedDateTime) {
     ShipmentEvent shipmentEvent = new ShipmentEvent();
     shipmentEvent.setShipmentEventTypeCode(documentStatus);
     shipmentEvent.setDocumentTypeCode(DocumentTypeCode.SHI);
